--- a/randomizer.ui
+++ b/randomizer.ui
@@ -138,6 +138,9 @@
             <property name="text">
              <string>Red Soul Walls</string>
             </property>
+            <property name="checked">
+             <bool>true</bool>
+            </property>
            </widget>
           </item>
           <item row="0" column="1">
@@ -402,8 +405,8 @@
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>57</width>
-            <height>22</height>
+            <width>100</width>
+            <height>30</height>
            </rect>
           </property>
           <layout class="QFormLayout" name="formLayout_5">
