Update world map exit rando description to be more clear

--- a/randomizer.ui
+++ b/randomizer.ui
@@ -405,8 +405,8 @@
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>100</width>
-            <height>30</height>
+            <width>770</width>
+            <height>358</height>
            </rect>
           </property>
           <layout class="QFormLayout" name="formLayout_5">
@@ -660,7 +660,7 @@
           <item row="0" column="0">
            <widget class="QCheckBox" name="open_world_map">
             <property name="text">
-             <string>Open world map</string>
+             <string>Open World Map</string>
             </property>
             <property name="checked">
              <bool>true</bool>
