--- a/randomizer.ui
+++ b/randomizer.ui
@@ -405,8 +405,8 @@
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>770</width>
-            <height>358</height>
+            <width>100</width>
+            <height>30</height>
            </rect>
           </property>
           <layout class="QFormLayout" name="formLayout_5">
@@ -833,6 +833,12 @@
      </item>
      <item>
       <widget class="QPushButton" name="reset_settings_to_default">
+       <property name="minimumSize">
+        <size>
+         <width>180</width>
+         <height>0</height>
+        </size>
+       </property>
        <property name="text">
         <string>Reset All Settings to Default</string>
        </property>
