--- a/randomizer.ui
+++ b/randomizer.ui
@@ -30,9 +30,6 @@
       <layout class="QVBoxLayout" name="verticalLayout_2">
        <item>
         <layout class="QGridLayout" name="gridLayout">
-         <item row="0" column="1">
-          <widget class="QLineEdit" name="clean_rom"/>
-         </item>
          <item row="0" column="0">
           <widget class="QLabel" name="label_2">
            <property name="text">
@@ -78,6 +75,13 @@
           <widget class="QPushButton" name="output_folder_browse_button">
            <property name="text">
             <string>Browse</string>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="1">
+          <widget class="QComboBox" name="clean_rom">
+           <property name="editable">
+            <bool>true</bool>
            </property>
           </widget>
          </item>
@@ -955,7 +959,6 @@
   </layout>
  </widget>
  <tabstops>
-  <tabstop>clean_rom</tabstop>
   <tabstop>clean_rom_browse_button</tabstop>
   <tabstop>output_folder</tabstop>
   <tabstop>output_folder_browse_button</tabstop>
