--- a/randomizer.ui
+++ b/randomizer.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>820</width>
-    <height>600</height>
+    <height>760</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -96,23 +96,9 @@
           </sizepolicy>
          </property>
          <property name="title">
-          <string>Randomization options</string>
+          <string>Progression randomization options</string>
          </property>
          <layout class="QGridLayout" name="gridLayout_7">
-          <item row="3" column="0">
-           <widget class="QCheckBox" name="randomize_enemy_stats">
-            <property name="text">
-             <string>Enemy Stats</string>
-            </property>
-           </widget>
-          </item>
-          <item row="4" column="1">
-           <widget class="QCheckBox" name="randomize_weapon_behavior">
-            <property name="text">
-             <string>Weapon Behavior</string>
-            </property>
-           </widget>
-          </item>
           <item row="0" column="0">
            <widget class="QCheckBox" name="randomize_pickups">
             <property name="text">
@@ -120,20 +106,6 @@
             </property>
             <property name="checked">
              <bool>true</bool>
-            </property>
-           </widget>
-          </item>
-          <item row="5" column="0">
-           <widget class="QCheckBox" name="randomize_equipment_stats">
-            <property name="text">
-             <string>Equipment Stats</string>
-            </property>
-           </widget>
-          </item>
-          <item row="0" column="2">
-           <widget class="QCheckBox" name="randomize_world_map_exits">
-            <property name="text">
-             <string>World Map Exits</string>
             </property>
            </widget>
           </item>
@@ -147,40 +119,17 @@
             </property>
            </widget>
           </item>
+          <item row="0" column="2">
+           <widget class="QCheckBox" name="randomize_world_map_exits">
+            <property name="text">
+             <string>World Map Exits</string>
+            </property>
+           </widget>
+          </item>
           <item row="0" column="1">
            <widget class="QCheckBox" name="randomize_boss_souls">
             <property name="text">
              <string>Boss Souls</string>
-            </property>
-            <property name="checked">
-             <bool>true</bool>
-            </property>
-           </widget>
-          </item>
-          <item row="2" column="2">
-           <widget class="QCheckBox" name="randomize_enemy_drops">
-            <property name="text">
-             <string>Enemy Drops</string>
-            </property>
-            <property name="checked">
-             <bool>true</bool>
-            </property>
-           </widget>
-          </item>
-          <item row="2" column="0">
-           <widget class="QCheckBox" name="randomize_enemies">
-            <property name="text">
-             <string>Enemy Locations</string>
-            </property>
-            <property name="checked">
-             <bool>true</bool>
-            </property>
-           </widget>
-          </item>
-          <item row="1" column="1">
-           <widget class="QCheckBox" name="randomize_portraits">
-            <property name="text">
-             <string>Portraits</string>
             </property>
             <property name="checked">
              <bool>true</bool>
@@ -197,101 +146,191 @@
             </property>
            </widget>
           </item>
-          <item row="3" column="2">
-           <widget class="QCheckBox" name="randomize_enemy_tolerances">
+          <item row="1" column="1">
+           <widget class="QCheckBox" name="randomize_portraits">
             <property name="text">
-             <string>Enemy Tolerances</string>
+             <string>Portraits</string>
+            </property>
+            <property name="checked">
+             <bool>true</bool>
             </property>
            </widget>
           </item>
-          <item row="4" column="2">
-           <widget class="QCheckBox" name="randomize_skill_behavior">
-            <property name="text">
-             <string>Skill Behavior</string>
-            </property>
-           </widget>
-          </item>
-          <item row="4" column="0">
-           <widget class="QCheckBox" name="randomize_consumable_behavior">
-            <property name="text">
-             <string>Consumable Behavior</string>
-            </property>
-           </widget>
-          </item>
-          <item row="2" column="1">
-           <widget class="QCheckBox" name="randomize_bosses">
-            <property name="text">
-             <string>Boss Locations</string>
-            </property>
-           </widget>
-          </item>
-          <item row="3" column="1">
-           <widget class="QCheckBox" name="randomize_enemy_anim_speed">
-            <property name="text">
-             <string>Enemy Animation Speed</string>
-            </property>
-           </widget>
-          </item>
-          <item row="7" column="1">
-           <widget class="QCheckBox" name="randomize_starting_room">
-            <property name="text">
-             <string>Starting Room</string>
-            </property>
-           </widget>
-          </item>
-          <item row="5" column="2">
-           <widget class="QCheckBox" name="randomize_weapon_and_skill_elements">
-            <property name="text">
-             <string>Weapon and Skill Elements</string>
-            </property>
-           </widget>
-          </item>
-          <item row="6" column="0">
-           <widget class="QCheckBox" name="randomize_shop">
-            <property name="text">
-             <string>Shop Items</string>
-            </property>
-           </widget>
-          </item>
-          <item row="6" column="2">
-           <widget class="QCheckBox" name="randomize_weapon_synths">
-            <property name="text">
-             <string>Weapon Synthesis</string>
-            </property>
-           </widget>
-          </item>
-          <item row="7" column="0">
+         </layout>
+        </widget>
+       </item>
+       <item>
+        <widget class="QGroupBox" name="groupBox_9">
+         <property name="title">
+          <string>Room randomization options</string>
+         </property>
+         <layout class="QGridLayout" name="gridLayout_9">
+          <item row="0" column="0">
            <widget class="QCheckBox" name="randomize_rooms_map_friendly">
             <property name="text">
              <string>Maps</string>
             </property>
            </widget>
           </item>
-          <item row="6" column="1">
-           <widget class="QCheckBox" name="randomize_wooden_chests">
+          <item row="0" column="1">
+           <widget class="QCheckBox" name="randomize_starting_room">
             <property name="text">
-             <string>Wooden Chest Items</string>
+             <string>Starting Room</string>
             </property>
            </widget>
           </item>
-          <item row="8" column="0">
-           <widget class="QCheckBox" name="randomize_room_connections">
-            <property name="text">
-             <string>Room Connections (Not map-friendly)</string>
-            </property>
-           </widget>
-          </item>
-          <item row="8" column="1">
+          <item row="1" column="1">
            <widget class="QCheckBox" name="randomize_area_connections">
             <property name="text">
              <string>Area Connections (Not map-friendly)</string>
             </property>
            </widget>
           </item>
-          <item row="5" column="1">
+          <item row="1" column="0">
+           <widget class="QCheckBox" name="randomize_room_connections">
+            <property name="text">
+             <string>Room Connections (Not map-friendly)</string>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="2">
+           <widget class="QWidget" name="widget" native="true"/>
+          </item>
+         </layout>
+        </widget>
+       </item>
+       <item>
+        <widget class="QGroupBox" name="groupBox_6">
+         <property name="title">
+          <string>Enemy randomization options</string>
+         </property>
+         <layout class="QGridLayout" name="gridLayout_11">
+          <item row="0" column="0">
+           <widget class="QCheckBox" name="randomize_enemies">
+            <property name="text">
+             <string>Enemy Locations</string>
+            </property>
+            <property name="checked">
+             <bool>true</bool>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="0">
+           <widget class="QCheckBox" name="randomize_enemy_stats">
+            <property name="text">
+             <string>Enemy Stats</string>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="1">
+           <widget class="QCheckBox" name="randomize_bosses">
+            <property name="text">
+             <string>Boss Locations</string>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="2">
+           <widget class="QCheckBox" name="randomize_enemy_drops">
+            <property name="text">
+             <string>Enemy Drops</string>
+            </property>
+            <property name="checked">
+             <bool>true</bool>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="2">
+           <widget class="QCheckBox" name="randomize_enemy_tolerances">
+            <property name="text">
+             <string>Enemy Tolerances</string>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="1">
+           <widget class="QCheckBox" name="randomize_enemy_anim_speed">
+            <property name="text">
+             <string>Enemy Animation Speed</string>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </widget>
+       </item>
+       <item>
+        <widget class="QGroupBox" name="groupBox_8">
+         <property name="title">
+          <string>Item property randomization options</string>
+         </property>
+         <layout class="QGridLayout" name="gridLayout_10">
+          <item row="0" column="0">
+           <widget class="QCheckBox" name="randomize_consumable_behavior">
+            <property name="text">
+             <string>Consumable Behavior</string>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="1">
+           <widget class="QCheckBox" name="randomize_weapon_behavior">
+            <property name="text">
+             <string>Weapon Behavior</string>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="2">
+           <widget class="QCheckBox" name="randomize_skill_behavior">
+            <property name="text">
+             <string>Skill Behavior</string>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="0">
+           <widget class="QCheckBox" name="randomize_equipment_stats">
+            <property name="text">
+             <string>Equipment Stats</string>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="1">
            <widget class="QCheckBox" name="randomize_skill_stats">
             <property name="text">
              <string>Skill Stats</string>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="2">
+           <widget class="QCheckBox" name="randomize_weapon_and_skill_elements">
+            <property name="text">
+             <string>Weapon and Skill Elements</string>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </widget>
+       </item>
+       <item>
+        <widget class="QGroupBox" name="groupBox_10">
+         <property name="title">
+          <string>Non-progress item location randomization options</string>
+         </property>
+         <layout class="QGridLayout" name="gridLayout_12">
+          <item row="0" column="0">
+           <widget class="QCheckBox" name="randomize_shop">
+            <property name="text">
+             <string>Shop Items</string>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="2">
+           <widget class="QCheckBox" name="randomize_weapon_synths">
+            <property name="text">
+             <string>Weapon Synthesis</string>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="3">
+           <widget class="QCheckBox" name="randomize_wooden_chests">
+            <property name="text">
+             <string>Wooden Chest Items</string>
             </property>
            </widget>
           </item>
@@ -409,8 +448,8 @@
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>100</width>
-            <height>30</height>
+            <width>770</width>
+            <height>518</height>
            </rect>
           </property>
           <layout class="QFormLayout" name="formLayout_5">
@@ -681,11 +720,25 @@
          </layout>
         </widget>
        </item>
+       <item>
+        <spacer name="verticalSpacer_2">
+         <property name="orientation">
+          <enum>Qt::Vertical</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>20</width>
+           <height>40</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
       </layout>
       <zorder>groupBox_3</zorder>
       <zorder>groupBox</zorder>
       <zorder>groupBox_2</zorder>
       <zorder>groupBox_4</zorder>
+      <zorder>verticalSpacer_2</zorder>
      </widget>
      <widget class="QWidget" name="tab_5">
       <attribute name="title">
@@ -970,6 +1023,10 @@
   <tabstop>randomize_red_walls</tabstop>
   <tabstop>randomize_portraits</tabstop>
   <tabstop>randomize_villagers</tabstop>
+  <tabstop>randomize_rooms_map_friendly</tabstop>
+  <tabstop>randomize_starting_room</tabstop>
+  <tabstop>randomize_room_connections</tabstop>
+  <tabstop>randomize_area_connections</tabstop>
   <tabstop>randomize_enemies</tabstop>
   <tabstop>randomize_bosses</tabstop>
   <tabstop>randomize_enemy_drops</tabstop>
@@ -983,12 +1040,8 @@
   <tabstop>randomize_skill_stats</tabstop>
   <tabstop>randomize_weapon_and_skill_elements</tabstop>
   <tabstop>randomize_shop</tabstop>
-  <tabstop>randomize_wooden_chests</tabstop>
   <tabstop>randomize_weapon_synths</tabstop>
-  <tabstop>randomize_rooms_map_friendly</tabstop>
-  <tabstop>randomize_starting_room</tabstop>
-  <tabstop>randomize_room_connections</tabstop>
-  <tabstop>randomize_area_connections</tabstop>
+  <tabstop>randomize_wooden_chests</tabstop>
   <tabstop>experimental_options_enabled</tabstop>
   <tabstop>randomize_players</tabstop>
   <tabstop>randomize_enemy_sprites</tabstop>
