--- a/randomizer.ui
+++ b/randomizer.ui
@@ -225,6 +225,16 @@
             </property>
            </widget>
           </item>
+          <item row="0" column="3">
+            <widget class="QCheckBox" name="randomize_enemy_drop_chances">
+            <property name="text">
+             <string>Enemy Drop Chances</string>
+            </property>
+            <property name="checked">
+             <bool>true</bool>
+            </property>
+           </widget>
+          </item>
           <item row="1" column="2">
            <widget class="QCheckBox" name="randomize_enemy_tolerances">
             <property name="text">
@@ -993,6 +1003,7 @@
   <tabstop>randomize_enemies</tabstop>
   <tabstop>randomize_bosses</tabstop>
   <tabstop>randomize_enemy_drops</tabstop>
+   <tabstop>randomize_enemy_drop_chances</tabstop>
   <tabstop>randomize_enemy_stats</tabstop>
   <tabstop>randomize_enemy_anim_speed</tabstop>
   <tabstop>randomize_enemy_tolerances</tabstop>
